--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,17 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Set up environment variables
+      run: echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" >> $GITHUB_ENV
+
+
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
 
     - name: Build and Push React Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/react-app:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/react-app:latest
+        docker build -t ${DOCKER_USERNAME}/react-app:latest .
+        docker push ${DOCKER_USERNAME}/react-app:latest
+
+    - name: Deploy with Docker Compose
+      run: docker-compose up -d
