--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,6 @@ jobs:
     - name: Set up environment variables
       run: echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" >> $GITHUB_ENV
 
-
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
 
@@ -25,5 +24,5 @@ jobs:
         docker build -t ${DOCKER_USERNAME}/react-app:latest .
         docker push ${DOCKER_USERNAME}/react-app:latest
 
-    - name: Deploy with Docker Compose
-      run: docker-compose up -d
+    # - name: Deploy with Docker Compose
+    #   run: docker-compose up -d
